--- a/index.html
+++ b/index.html
@@ -1,76 +1,53 @@
 <!doctype html>
-<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
-<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on https://github.com/jonrohan -->
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Game of Thrones Social Network Analysis by MarianObuseh</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/github-dark.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="javascripts/respond.js"></script>
+    <!--[if lt IE 9]>
+      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <!--[if lt IE 8]>
+    <link rel="stylesheet" href="stylesheets/ie.css">
+    <![endif]-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen">
-  <link rel="stylesheet" href="stylesheets/github-dark.css">
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script type="text/javascript" src="javascripts/script.js"></script>
+  </head>
+  <body>
+      <div id="header">
+        <nav>
+          <li class="fork"><a href="https://github.com/MarianObuseh/Game-of-Thrones-Season-1-Social-Network-Analysis">View On GitHub</a></li>
+          <li class="downloads"><a href="https://github.com/MarianObuseh/Game-of-Thrones-Season-1-Social-Network-Analysis/zipball/master">ZIP</a></li>
+          <li class="downloads"><a href="https://github.com/MarianObuseh/Game-of-Thrones-Season-1-Social-Network-Analysis/tarball/master">TAR</a></li>
+          <li class="title">DOWNLOADS</li>
+        </nav>
+      </div><!-- end header -->
 
-  <title>Game of Thrones Social Network Analysis</title>
-  <meta name="description" content="Just for fun! Here, I write a Python program that analyzes the network dynamics of the Game of Thrones characters from the first season. I particularly love the visuals from my analysis:)">
+    <div class="wrapper">
 
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-
-</head>
-
-<body>
-
-  <div class="wrapper">
-    <header>
-      <h1 class="title">Game of Thrones Social Network Analysis</h1>
-    </header>
-    <div id="container">
-      <p class="tagline">Just for fun! Here, I write a Python program that analyzes the network dynamics of the Game of Thrones characters from the first season. I particularly love the visuals from my analysis:)</p>
-      <div id="main" role="main">
-        <div class="download-bar">
-        <div class="inner">
-          <a href="https://github.com/MarianObuseh/Game-of-Thrones-Season-1-Social-Network-Analysis/tarball/master" class="download-button tar"><span>Download</span></a>
-          <a href="https://github.com/MarianObuseh/Game-of-Thrones-Season-1-Social-Network-Analysis/zipball/master" class="download-button zip"><span>Download</span></a>
-          <a href="https://github.com/MarianObuseh/Game-of-Thrones-Season-1-Social-Network-Analysis" class="code">View Game of Thrones Social Network Analysis on GitHub</a>
+      <section>
+        <div id="title">
+          <h1>Game of Thrones Social Network Analysis</h1>
+          <p>Just for fun! Here, I write a Python program that analyzes the network dynamics of the Game of Thrones characters from the first season. I particularly love the visuals from my analysis:)</p>
+          <hr>
+          <span class="credits left">Project maintained by <a href="https://github.com/MarianObuseh">MarianObuseh</a></span>
+          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
         </div>
-        <span class="blc"></span><span class="trc"></span>
-        </div>
-        <article class="markdown-body">
-          <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-<p>You can @mention a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a class="user-mention" data-hovercard-type="user" data-hovercard-url="/users/defunkt/hovercard" data-octo-click="hovercard-link-click" data-octo-dimensions="link_type:self" href="https://github.com/defunkt">@defunkt</a>), PJ Hyett (<a class="user-mention" data-hovercard-type="user" data-hovercard-url="/users/pjhyett/hovercard" data-octo-click="hovercard-link-click" data-octo-dimensions="link_type:self" href="https://github.com/pjhyett">@pjhyett</a>), and Tom Preston-Werner (<a class="user-mention" data-hovercard-type="user" data-hovercard-url="/users/mojombo/hovercard" data-octo-click="hovercard-link-click" data-octo-dimensions="link_type:self" href="https://github.com/mojombo">@mojombo</a>) founded GitHub.</p>
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
-        </article>
-      </div>
+
+        <h1>
+<a id="game-of-thrones-season-1-social-network-analysis" class="anchor" href="#game-of-thrones-season-1-social-network-analysis" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Game of Thrones Season 1 Social Network Analysis</h1>
+<p>Jusr for fun! Here, I write a Python program that analyzes the network dynamics of the Game of Thrones characters from the first season. Each row in the dataset contains the names of two characters, the number of scenes that they appeared together in (hence, the “strength” of their relationship), and the season of the series for the number of scenes value. I particularly love the visuals from my analysis:)</p>
+<h2>
+<a id="nb" class="anchor" href="#nb" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>NB</h2>
+<p>This dataset has more information than I ended up using for my analysis. Therefore, I really didn't do anything with the “strength” information from this dataset.</p>
+      </section>
+
     </div>
-    <footer>
-      <div class="owner">
-      <p><a href="https://github.com/MarianObuseh" class="avatar"><img src="https://avatars2.githubusercontent.com/u/62730978?s=60&amp;v=4" width="48" height="48"></a> <a href="https://github.com/MarianObuseh">MarianObuseh</a> maintains <a href="https://github.com/MarianObuseh/Game-of-Thrones-Season-1-Social-Network-Analysis">Game of Thrones Social Network Analysis</a></p>
-
-
-      </div>
-      <div class="creds">
-        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
-      </div>
-    </footer>
-  </div>
-  <div class="current-section">
-    <a href="#top">Scroll to top</a>
-    <a href="https://github.com/MarianObuseh/Game-of-Thrones-Season-1-Social-Network-Analysis/tarball/master" class="tar">tar</a><a href="https://github.com/MarianObuseh/Game-of-Thrones-Season-1-Social-Network-Analysis/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
-    <p class="name"></p>
-  </div>
-
-  
-</body>
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+    
+  </body>
 </html>
