Create master branch via GitHub

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Game-of-thrones-season-1-social-network-analysis by MarianObuseh</title>
+    <title>Game of Thrones Season 1 Social Network Analysis by MarianObuseh</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-dark.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -31,7 +31,7 @@
 
       <section>
         <div id="title">
-          <h1>Game-of-thrones-season-1-social-network-analysis</h1>
+          <h1>Game of Thrones Season 1 Social Network Analysis</h1>
           <p>Just for fun! Here, I write a Python program that analyzes the network dynamics of the Game of Thrones characters from the first season. I particularly love the visuals from my analysis:)</p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/MarianObuseh">MarianObuseh</a></span>
